--- a/src/app/css/sectionHowWeWork.module.css
+++ b/src/app/css/sectionHowWeWork.module.css
@@ -1,11 +1,25 @@
 section.section9 {
-  outline: none;
   min-height: min-content;
   text-align: center;
-
-
+  background-image: url(../../../public/images/backgreen.png), url(../../../public/images/plantwhite.png), url(../../../public/images/steps.png);
+  /* background-image: url(../../../public/images/plantwhite.png); */
+  background-size: auto, 12em, 12em;
+  background-repeat: repeat, no-repeat, no-repeat;
+  background-attachment: local, fixed, local;
+  background-blend-mode: soft-light;
+  background-position: center, bottom left, top 2em right 2em;
+  text-align: center;
+  
   --people-size-vert: 10em;
 
+}
+
+.greenText {
+  padding: 0.5em 1em;
+  background-color: var(--greenToBlue2);
+  border-radius: 2em;
+  margin: 0 7em 0 1em;
+  width: fit-content;
 }
 
 section.section9 h2{
@@ -13,9 +27,10 @@ section.section9 h2{
 }
 
 .firstRow {
-  padding-top: 2em;
+  padding: 2em 1em 0;
   display: flex;
   text-align: center;
+  
 }
 
 .col1 {
@@ -98,4 +113,44 @@ section.section6 p{
   min-height: 338px;
   margin: 0 auto;
   background-size: contain;
+}
+
+
+.wave {
+  display: block;
+  position: relative;
+  min-height: 40px;
+  width: 100%;
+  /* background: #0475b5; */
+  background-color: #fcf9ee;
+  transform: scale(1, 1);
+  margin-bottom: 40px;
+}
+
+.wave:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  border-radius: 100%;
+  width: 100%;
+  height: 300px;
+  right: -25%;
+  top: 20px;
+
+  background-image: url(../../../public/images/backgreen.png);
+}
+
+.wave:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100%;
+  width: 100%;
+  height: 300px;
+  /* background-color: #0475b5; */
+
+  background-color: #fcf9ee;
+  left: -25%;
+  top: -240px;
+  clip-path: ellipse(100% 15% at -15% 100%);
 }
