--- a/src/app/css/setion1.module.css
+++ b/src/app/css/setion1.module.css
@@ -115,7 +115,7 @@ section.section1 .titleGroup::before
 .layer1 {
   z-index: 2;
   position: relative;
-  padding-bottom: 10em;
+  padding-bottom: 8.5em;
 }
 
 .comunity {
@@ -134,7 +134,7 @@ section.section1 .titleGroup::before
   background-image: url(../../../public/images/comuni3.png);
 }
 
-.comunity::after {
+.comunityWave {
   display: block;
   width: 100%;
   height: 100%;
