--- a/src/app/css/setionFinancedInitiatives.module.css
+++ b/src/app/css/setionFinancedInitiatives.module.css
@@ -3,9 +3,10 @@ section.section6 {
   min-height: min-content;
   text-align: center;
 
-  background-image:url(../../../public/images/croc.png),  url(../../../public/images/hojasTansp1.png) ;
-  background-size: auto 14em, 12em;;
-    background-position: left -7.5em bottom -2em, bottom -1em right -1em;
+  background-image: url(../../../public/images/croc.png), url(../../../public/images/hojasTansp1.png);
+  background-size: auto 14em, 12em;
+  ;
+  background-position: left -7.5em bottom -2em, bottom -1em right -1em;
   background-repeat: no-repeat;
   background-attachment: local, fixed;
   position: relative;
@@ -85,6 +86,7 @@ section.section6 p{
 .totalScreenBackgroung ol li:nth-child(3):after {
   background-image: url(../../../public/images/mexico1.png);
 }
+
 /* 
 .wave {
   display: block;
@@ -184,12 +186,12 @@ position: absolute; left: 60px; top: -100px; width: 300px; height: 500px; border
 
 .wave {
   width: 100%;
-    height: 100%;
-    background: #4aaca7;
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
+  height: 100%;
+  background: #4aaca7;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
 }
 
 .wave:after {
@@ -207,12 +209,12 @@ position: absolute; left: 60px; top: -100px; width: 300px; height: 500px; border
 
 .wave:after {
   right: 0;
-    bottom: -1em;
-    height: 120%;
-    width: 150%;
-    transform: translate(50%, -0);
-    border-radius: 50%;
-    box-shadow: 1px 2px 3px #555 inset;
+  bottom: -1em;
+  height: 120%;
+  width: 150%;
+  transform: translate(50%, -0);
+  border-radius: 50%;
+  box-shadow: 1px 2px 3px #555 inset;
 
   background-color: var(--body-background-color);
 }
