--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,9 @@
   --orange1: #cf5928;
 
   --body-background-color: #fcf9ee;
-  
+  --brown1: #553e28;
+  --brown2: #553328;
+
 
   --blue-background-color: #0475b5;
 
@@ -105,7 +107,7 @@ h2 {
 /* JM Responsive*/
 
 body {
-  font-size: 15px;
+  font-size: 16px;
 }
 
 @media (min-width: 800px) { 
