--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,10 +45,11 @@
 
   --olive-green: #d1e28d;
   --olive-background-green: #d2e4cb;
-  --olive-background-green2: #93c23dff;
+  --olive-background-green2: #93c23d;
 
   --background-green1: #8bc53f;
   --background-orange1:#f7941c;
+  --orange1: #be5211;
 
   
   --greenToBlue1: #7ecb29;
@@ -63,7 +64,7 @@
 
   --niceBlue: #0475b5;
 
-  --orange1: #cf5928;
+  --orange2: #cf5928;
 
   --body-background-color: #fcf9ee;
   --brown1: #553e28;
