--- a/src/app/css/topMenu.module.css
+++ b/src/app/css/topMenu.module.css
@@ -150,6 +150,7 @@
 .allignTop button {
   border-radius: 4px;
   margin-right: 0.5em;
+  color: var(--brown2);
 } 
 
 .allign3 a:hover, .allign3 a:active, .allign3  a:focus,
