--- a/src/app/css/topMenu.module.css
+++ b/src/app/css/topMenu.module.css
@@ -32,6 +32,7 @@
   top: 0;
   left: 0;
   box-shadow: 3px 2px 5px #555;
+  font-size: 15px;
 
   background-image: url(../../../public/images/hojas7.png);
   background-size: contain;
