--- a/src/app/css/setion7.module.css
+++ b/src/app/css/setion7.module.css
@@ -1,31 +1,15 @@
 section.section7 {
-  outline: none;
-  min-height: min-content;
-  background-color: #0475b5;
-  text-align: center;
-
-  color: white;
-
+  display: flex;
+  justify-content: center;
 }
-
-section.section7 h2{
-  padding: 1.5em;
-}
-/* 
-section.section6 p{
-  margin-left: 50%;
-  font-size: 0.75em;
-  padding: 0 1em;
-} */
 
 .totalScreenBackgroung {
 
   position: relative;
   margin: 0 auto;
-  /* min-height: 70vh; */
   max-width: 800px;
   min-height: 338px;
-  margin: 0 auto;
+  margin: 0 1em;
   background-size: contain;
 }
 
@@ -33,15 +17,22 @@ section.section6 p{
   display: flex;
   flex-direction: column;
   width: 100%;
+
   justify-content: space-between;
-  margin: 0 1em;
-  /* padding-bottom: 7em;
-  background-image: url(../../../public/images/deer.png); */
+  margin: 0 0 2em;
+  padding-bottom: 5em;
+}
+
+.aims strong {
+  z-index: 2;
+  position: relative;
 }
 
 .aims li {
-  padding: 1em 1em 1.5em 9.5em;
+  padding: 2em 3em 1.5em 10.5em;
   position: relative;
+  z-index: 2;
+  margin: 1em 0;
 }
 
 .aims li::after {
@@ -52,18 +43,45 @@ section.section6 p{
   content: " ";
   display: block;
   height: 100%;
-  width: 7em;
+  width: 8em;
   top: 0;
   left: 1em;
 }
 
 .aims li:nth-child(1)::after {
-  background-image: url(../../../public/images/map1.png);
+  background-image: url(../../../public/images/map2.png);
 }
 
 
 .aims li:nth-child(2)::after {
 
-  background-image: url(../../../public/images/map2.png);
+  background-image: url(../../../public/images/map1.png);
+
+}
+
+.deerDecor {
+  position: absolute;
+  aspect-ratio: 163/239;
+  height: 15em;
+  bottom: -1em;
+  left: -2em;
+  z-index: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url(../../../public/images/deer.png);
+
+}
+
+.hojasDecor {
+  position: absolute;
+  aspect-ratio: 238/165;
+
+  height: 7em;
+  bottom: -0.7em;
+  right: -2em;
+  z-index: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url(../../../public/images/hojas14.png);
 
 }
