--- a/src/app/css/setionFinancingInstruments.module.css
+++ b/src/app/css/setionFinancingInstruments.module.css
@@ -8,7 +8,7 @@ section.sectionFinancingInstruments {
   background-repeat: repeat, no-repeat, no-repeat;
   background-attachment: local, fixed, local;
   background-blend-mode: soft-light;
-  background-position: center, top left , top 2em right 2em;
+  background-position: center, top left , bottom 2em right 2em;
 
 }
 
