--- a/src/app/css/setion5.module.css
+++ b/src/app/css/setion5.module.css
@@ -3,6 +3,13 @@ section.section5 {
   min-height: min-content;
   padding-bottom: 2em;
   text-align: center;
+
+    background-image: url(../../../public/images/hojasTansp1.png);
+  background-position: bottom -1em right -1em;
+  background-size: 12em;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  z-index: 3;
 }
 
 section.section5 h2,
@@ -11,7 +18,7 @@ section.section5 h3 {
 }
 
 section.section5 h3 {
-  color: var(--orange2);
+  color: var(--body-background-color);
 }
 
 section.section5 h2 {
@@ -28,6 +35,9 @@ section.section5 h2 {
   margin: 0 auto;
   padding: 0 1em;
   background-size: contain;
+  display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .green_card {
