--- a/src/app/css/setion7.module.css
+++ b/src/app/css/setion7.module.css
@@ -1,6 +1,13 @@
 section.section7 {
   display: flex;
   justify-content: center;
+
+  background-image: url(../../../public/images/hojasTansp1.png);
+  background-position: bottom -1em right -1em;
+  background-size: 12em;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  z-index: 3;
 }
 
 .totalScreenBackgroung {
