--- a/src/app/css/sectionLogos.module.css
+++ b/src/app/css/sectionLogos.module.css
@@ -1,9 +1,20 @@
 section.sectionLogos {
   outline: none;
   min-height: min-content;
-  background-color: var(--niceBlue);
   text-align: center;
   background-blend-mode: multiply;
+  background-image: url(../../../public/images/carton1.jpeg);
+
+  background-color: var(--niceBlue);
+  position: relative;
+}
+
+section.sectionLogos::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   background-image: url(../../../public/images/carton1.jpeg);
 }
 
@@ -11,34 +22,26 @@ section.sectionLogos {
   padding: 1em;
   border-radius: 2em;
   box-shadow: 2px 2px 6px #222;
-  background-color:  var(--body-background-color);
+  background-color: var(--body-background-color);
 }
 
-
-section.sectionLogos h2{
+section.sectionLogos h2 {
   padding: 1em;
   color: white;
   font-size: 2em;
   filter: drop-shadow(2px 4px 6px #222);
 }
 
-section.sectionLogos strong{
-  font-size: 1.2em;
+section.sectionLogos strong {
+  font-size: 1em;
   color: var(--orange1)
 }
 
-/* 
-section.section6 p{
-  margin-left: 50%;
-  font-size: 0.75em;
-  padding: 0 1em;
-} */
 
 .totalScreenBackgroung {
 
   position: relative;
   margin: 0 auto;
-  /* min-height: 70vh; */
   max-width: 800px;
   min-height: 338px;
   margin: 0 auto;
@@ -47,12 +50,16 @@ section.section6 p{
 
 .orgslist {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
   justify-content: space-between;
   padding-bottom: 5em;
   z-index: 3;
   position: relative;
+  flex-wrap: wrap;
+  gap: 1em;
+  justify-content: center;
+  padding: 0 1em;
 }
 
 .orgslist li {
@@ -61,55 +68,64 @@ section.section6 p{
   display: flex;
   padding: 1em 2em;
   flex-direction: column;
+  max-width: 20em;
+  flex-basis: 20em;
+}
+
+.orgslist li a {
+  font-size: 0.9em;
 }
 
 .logoWrap {
   position: relative;
-  margin: 0 auto;
+  height: 2.5em;
+  margin: auto;
 }
 
 .orgslist li:nth-child(1) .logoWrap {
-  height: 3em;
-  width: 15em;
+  width: 12em;
 }
 
 .orgslist li:nth-child(2) .logoWrap {
-  height: 3em;
   width: 4.5em;
 }
 
 
 .orgslist li:nth-child(3) .logoWrap {
-  height: 3em;
-  width: 8.5em;
+
+  width: 7em;
 }
 
 .orgslist li:nth-child(4) .logoWrap {
-  height: 3em;
-  width: 12em;
+
+  width: 10em;
 }
 
 .orgslist li:nth-child(5) .logoWrap {
-  height: 3em;
-  width: 7.5em;
+
+  width: 6.2em;
+}
+
+.orgslist li:nth-child(6) .logoWrap {
+
+  width: 5.5em;
 }
 
 .orgslist li:nth-child(2)::before {
-    content: " ";
-    position: absolute;
-    height: 40%;
-    width: 5em;
-    display: block;
-    top: -0.5em;
-    left: 1em;
-    transform: rotate(45deg);
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-image: url(../../../public/images/hojas5.png);
-    background-size: contain;
-    z-index: 1;
+  content: " ";
+  position: absolute;
+  height: 40%;
+  width: 5em;
+  display: block;
+  top: -0.5em;
+  left: 1em;
+  transform: rotate(45deg);
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-image: url(../../../public/images/hojas5.png);
+  background-size: contain;
+  z-index: 1;
 }
-
 
 .orgslist li:nth-child(3)::before {
   content: " ";
@@ -127,7 +143,6 @@ section.section6 p{
   z-index: -1;
 }
 
-
 .orgslist li:nth-child(3)::after {
   content: " ";
   position: absolute;
@@ -143,4 +158,3 @@ section.section6 p{
   background-size: contain;
   z-index: 1;
 }
-
