--- a/src/app/css/setionorganigrama.module.css
+++ b/src/app/css/setionorganigrama.module.css
@@ -20,6 +20,7 @@ section.setionorganigrama {
   margin: 0 auto;
   background-size: contain;
   text-align: center;
+  padding-bottom: 3em;
 
   --organig-left-lines-size: 3em;
 }
