--- a/src/app/css/setion1.module.css
+++ b/src/app/css/setion1.module.css
@@ -52,7 +52,7 @@ section.section1 .titleGroup::before
   top: 2em;
   background-size: contain;
   background-repeat: no-repeat;
-  left: -4em;
+  left: -3em;
   opacity: 0.7;
   transform: scaleX(-1) rotate(131deg);
   z-index: -1;
@@ -70,7 +70,7 @@ section.section1 .titleGroup::before
 .titleGroup {
   color: white;
   filter: drop-shadow(2px 4px 6px black);
-  padding: 3em 2em 0;
+  padding: 4em 2em 0;
   height: var(--logo-height);
   width: var(--logo-width);
   margin: 0 auto;
@@ -162,6 +162,7 @@ section.section1 .titleGroup::before
 }
 
 ul.socialMedia {
+  display: none;
   background: white;
   border-radius: 0 10px 10px 0;
   width: max-content;
