--- a/src/app/css/setion8.module.css
+++ b/src/app/css/setion8.module.css
@@ -7,7 +7,7 @@
 }
 
 .section8 {
-  padding: 0;
+  padding: 0 !important;
 }
 
 .section8 h2 {
@@ -126,7 +126,6 @@
 }
 
 .maizDecor::before {
-  opacity: 0.8;
   height: 9em;
   right: auto;
   left: 0;
