--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -52,12 +52,16 @@
   font-family: var(--font-mono);
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+
+h2.whiteH2 {
+  color: var(--body-background-color);
+  filter: drop-shadow(0 1px 2px #222);
 }
+
+h2.greenH2 {
+  color: var(--greenfont1);
+}
+
 
 .card {
   padding: 1rem 1.2rem;
@@ -93,25 +97,6 @@
   padding: 4rem 0;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
@@ -187,6 +172,11 @@
 ******
 ****** */
 
+
+h2.whiteH2 {
+  color: var(--body-background-color);
+  filter: drop-shadow(0 2px 2px #222);
+}
 
 .sectionHeight {
   /* min-height: 500px; */
