--- a/src/app/css/setionResults.module.css
+++ b/src/app/css/setionResults.module.css
@@ -10,27 +10,35 @@ section.section12 h2 {
   padding: 0 1.5em 0.5em;
 }
 
-
-/* 
-section.section6 p{
-  margin-left: 50%;
-  font-size: 0.75em;
-  padding: 0 1em;
-} */
-
 .totalScreenBackgroung {
-
+  align-items: center;
   position: relative;
   margin: 0 auto;
-  /* min-height: 70vh; */
-  /* max-width: 800px; */
   min-height: 338px;
   margin: 0 auto;
   background-size: contain;
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding-bottom: 6em;
+  padding: 1em 1em 6em;
+}
+
+.header{
+  text-align: left;
+  padding: 1em 2em;
+  display: flex;
+  align-items: center;
+}
+
+.header *{
+  display: inline;
+}
+
+.header h2{
+  color: var(--blueOrg4);
+  padding: 0 0.4em 0 0 !important;
+  border-right: 3px solid var(--greenToBlue1);
+  margin-right: 0.4em;
 }
 
 .firstRow {
@@ -43,9 +51,8 @@ section.section6 p{
 .firstRow>li {
   position: relative;
   flex-grow: 1;
-  flex-basis: 12em;
-  max-width: 12em;
-
+  flex-basis: 14em;
+  max-width: 14em;
 }
 
 .firstRow>li::after {
@@ -78,7 +85,6 @@ section.section6 p{
   background-image: url(../../../public/images/results_magni.png);
 }
 
-/** */
 .firstRow>li>ol {
   position: relative;
   padding-top: 1em;
@@ -88,7 +94,6 @@ section.section6 p{
 .firstRow>li>ol>li {
   position: relative;
   padding: 0.6em 0.5em 0.6em 3em;
-  font-size: 15px;
 }
 
 .firstRow>li>ol>li::after {
