--- a/src/app/css/setionDirectTerritorialFinancing.module.css
+++ b/src/app/css/setionDirectTerritorialFinancing.module.css
@@ -9,6 +9,9 @@ section.SetionDirectTerritorialFinancing {
   background-attachment: fixed;
   background-blend-mode: soft-light;
   padding-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section.section8 h2 {
@@ -32,13 +35,10 @@ section.section8 h2 {
 }
 
 .totalScreenBackgroung {
-
   position: relative;
-  margin: 0 auto;
-  /* min-height: 70vh; */
   max-width: 800px;
   min-height: 338px;
-  margin: 1em auto;
+  margin: 1em 1em;
   background-size: contain;
 }
 
