--- a/src/app/css/setionRational.module.css
+++ b/src/app/css/setionRational.module.css
@@ -20,40 +20,59 @@ section.section4 h2 {
 
 .card_top {
   position: relative;
+  padding: 0 1em;
 }
 
 .tucan_card {
-  background-image: url(../../../public/images/backtucan.png);
+  /* background-image: url(../../../public/images/backtucan.png); */
   width: fit-content;
-    aspect-ratio: 1146/781;
+  /* aspect-ratio: 1146/781; */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 1.5em 1em 5em;
+  padding: 2em 2em 0;
   position: relative;
   font-size: 15px;
   z-index: 3;
+  background-color: white;
+  margin: 1em 0 9em;
+}
+
+.tucan_card::after {
+  background-image: url(../../../public/images/backtucan.png); 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  content: " ";
+  aspect-ratio: 1146/781; 
+  width: 100%;
+  left: 0;
+  bottom: -9.5em;
+  position: absolute;
+
 }
 
 .tucan_card .scrollArea {
-  
-  overflow: scroll;
   height: 100%;
+  overflow: auto;
+  font-size: var(--fontSizeM);
 }
 
 .tucan_card p {
   padding: 0 1.5em 1.5em;
-  font-size: 0.9em;
   z-index: 2;
   position: relative;
 }
 
+.tucan_card p span {
+  vertical-align: super;
+}
 
 .tucan_card::before {
   content: " ";
   position: absolute;
   height: 5.5em;
-  width: 5em;
+  width: 3em;
   display: block;
   top: 6em;
   left: 0;
@@ -63,6 +82,11 @@ section.section4 h2 {
   background-image: url(../../../public/images/hojas5.png);
   background-size: contain;
   z-index: 1;
+}
+
+.small {
+  font-size: 14px;
+  text-align: left;
 }
 
 .card_top::after {
@@ -82,7 +106,6 @@ section.section4 h2 {
   overflow: hidden;
 }
 
-
 .card_top::before {
   content: " ";
   position: absolute;
@@ -98,8 +121,6 @@ section.section4 h2 {
   background-size: contain;
   z-index: 1;
 }
-
-
 
 .wave {
   display: block;
@@ -133,21 +154,19 @@ section.section4 h2 {
   border-radius: 100%;
   width: 100%;
   height: 300px;
-  
+
   background-image: url(../../../public/images/carton2.png);
   left: -25%;
   top: -240px;
   clip-path: ellipse(100% 15% at -15% 100%);
 }
 
-
-
-@media (min-width: 800px) { 
+@media (min-width: 800px) {
   .tucan_card {
+    padding: 2em 2em 0;
+  }
 
-    padding: 2em 2em 8em;
-
+  .tucan_card::before {
+    width: 5em;
   }
 }
-
-
