--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,13 +64,11 @@
   --niceBlue: #0475b5;
 
   --orange2: #cf5928;
+  --orange3: #f7941c;
 
   --body-background-color: #fcf9ee;
   --brown1: #553e28;
   --brown2: #553328;
-
-
-  --blue-background-color: #0475b5;
 
   --fontSizeM: 16px;
   --fontSizeL: 24px;
